--- a/style.css
+++ b/style.css
@@ -1,23 +1,22 @@
 #main {
   background: #c1cfda;
 }
-body header h1 {
-  text-align: center;
-}
 body header h2 {
   text-align: center;
 }
+
 #img-div {
   background: white;
+
   border-radius: 40px;
-  padding: 20px;
+  padding: 30px;
   margin-left: 200px;
   margin-right: 150px;
 }
 #image {
-  padding: 20px;
-  width: 60em;
-  padding: auto;
+  /* padding: 20px; */
+  width: 100%;
+  height: 100%;
 }
 #img-caption {
   text-align: center;
@@ -28,11 +27,19 @@ article h2 {
 #title {
   font-size: 3em;
   font-weight: bold;
+  text-align: center;
 }
-.timeline {
-  margin-left: 80px;
-
-  font-size: 20px;
-  line-height: 2.5em;
-
+ul{
+ /* display: table; */
+ margin: 0 auto;
+ max-width: 50%;
 }
+
+
+ 
+
+
+ 
+
+
+
