--- a/style.css
+++ b/style.css
@@ -10,13 +10,18 @@ body header h2 {
 
   border-radius: 40px;
   padding: 30px;
-  margin-left: 200px;
-  margin-right: 150px;
+  margin: 0 auto;
+  width: auto;
+  height: auto;
+  max-width: 700px;
 }
 #image {
   /* padding: 20px; */
   width: 100%;
-  height: 100%;
+  height: auto;
+  max-width: 700px;
+  margin: 0 auto;
+  display: block;
 }
 #img-caption {
   text-align: center;
